--- a/listings-services/Dockerfile
+++ b/listings-services/Dockerfile
@@ -1,20 +1,13 @@
-# Use a lighter version of Node as a parent image
-FROM mhart/alpine-node:12
+FROM node:12
 
-# Set the working directory to /listings-service
-WORKDIR /listings-service
+COPY {package.json,yarn.lock} /listings-service/
 
-# copy package.json into the container at /listings-service
-COPY package*.json /listings-service/
+WORKDIR /opt/seesee-platform
 
-# install dependencies
-RUN yarn install
+RUN yarn
 
-# Copy the current directory contents into the container at /listings-service
-COPY . /listings-service/
+COPY . listings-service/
 
-# Make port 80 available to the world outside this container
 EXPOSE 80
 
-# Run the app when the container launches
-CMD ["yarn", "start"]
+CMD ["yarn" "start"]
