--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -1,7 +1,14 @@
 {
   "name": "api-gateway",
   "version": "0.1.0",
+  "main": "src/index.js",
   "scripts": {
-    "start": "echo 'Hello from api-gateway !'"
+    "start": "node src/index.js"
+  },
+  "author": "",
+  "description": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
