--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -6,14 +6,14 @@ RUN apt-get update && apt-get install -y ranger vim
 
 USER node
 
-RUN mkdir -p /home/node/seesee-platform && chown -R node:node /home/node/seesee-platform
+RUN mkdir -p /home/node/api-gateway && chown -R node:node /home/node/api-gateway
 
-WORKDIR /home/node/seesee-platform
+WORKDIR /home/node/api-gateway
 
 COPY . .
 
 RUN yarn install --production
 
-EXPOSE 7000
+EXPOSE 3000
 
 CMD yarn start
