--- a/default.conf
+++ b/default.conf
@@ -1,30 +1,28 @@
 server {
 
-  listen 8080;
-  root /srv/www/static;
+  # listen 80;
+  root /usr/share/nginx/html;
+
+  # location / {
+  #   try_files $uri;
+  # }
 
   location / {
-    try_files $uri $uri/ @web;
-  }
-
-  location @web {
     proxy_pass http://web:3000;
   }
 
-  location /api/v1/search {
-    proxy_pass http://search:3000;
+  location /api/v1/listings {
+    proxy_pass http://listings:3000;
   }
 
-  location /api/v1/search/depends-on {
-    proxy_pass http://search:3000;
-  }
+  # location /api/v1/search/depends-on {
+  #   proxy_pass http://search:3000;
+  # }
 
-  location /api/v1/books {
-    proxy_pass http://books:3000;
-  }
-
-  location /api/v1/videos {
-    proxy_pass http://videos:3000;
-  }
-
+  # location /api/v1/books {
+  #   proxy_pass http://books:3000;
+  # }
+  # location /api/v1/videos {
+  #   proxy_pass http://videos:3000;
+  # }
 }
