--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,50 @@
-version: '2.1'
+version: '3'
 services:
-  api-gateway:
-    container_name: api-gateway
-    build: './api-gateway'
-    ports:
-      - '3002:3000'
-    depends_on:
-      - listings-service
-    networks:
-      - platform-network
+  postgres:
+    image: 'postgres:latest'
 
-  listings-service:
-    container_name: listings-service
-    build: './listings-service'
-    environment:
-      - MONGO_DB_URI=mongodb://db/seesee-listings
-    depends_on:
-      - db
-    ports:
-      - '7100:7100'
-    networks:
-      - platform-network
+  redis:
+    image: 'redis:latest'
 
   nginx:
-    container_name: nginx
-    image: nginx
-    volumes:
-      - ./seesee-client/public:/usr/share/nginx/html:ro
-      # - ./default.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - platform-network
-
-  nginx-proxy:
-    container_name: nginx-proxy
-    image: jwilder/nginx-proxy
+    restart: always
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./nginx
     ports:
-      - '80:80'
-      - '443:443'
+      - '3050:80'
+
+  api:
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./server
     volumes:
-      - /etc/nginx/certs
-      - /etc/nginx/vhost.d
-      - /usr/share/nginx/html
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-    depends_on:
-      - nginx
-    networks:
-      - platform-network
+      - /app/node_modules
+      - ./server:/app
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - PGUSER=postgres
+      - PGHOST=postgres
+      - PGDATABASE=postgres
+      - PGPASSWORD=postgres_password
+      - PGPORT=5432
 
-  db:
-    container_name: mongodb
-    image: mongo
-    ports:
-      - '27017:27017'
+  client:
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./client
+    volumes:
+      - /app/node_modules
+      - ./client:/app
 
-networks:
-  platform-network:
+  worker:
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./worker
+    volumes:
+      - /app/node_modules
+      - ./worker:/app
