--- a/redis-service/package.json
+++ b/redis-service/package.json
@@ -1,10 +1,16 @@
 {
+  "name": "redis-service",
+  "version": "0.1.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon"
+  },
   "dependencies": {
     "nodemon": "1.18.3",
     "redis": "2.8.0"
   },
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon"
-  }
+  "author": "Dany Dodson",
+  "description": "redis service for seesee.space",
+  "license": "ISC"
 }
