--- a/server-service/package.json
+++ b/server-service/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "server-service",
+  "version": "0.1.0",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon",
+    "start": "node index.js"
+  },
   "dependencies": {
     "express": "4.16.3",
     "pg": "7.4.3",
@@ -7,8 +14,7 @@
     "nodemon": "1.18.3",
     "body-parser": "*"
   },
-  "scripts": {
-    "dev": "nodemon",
-    "start": "node index.js"
-  }
+  "author": "Dany Dodson",
+  "description": "server service for seesee.space",
+  "license": "ISC"
 }
