--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,37 +14,37 @@ services:
     ports:
       - '3050:80'
 
-  api:
+  server-service:
     build:
       dockerfile: Dockerfile.dev
-      context: ./server
+      context: ./server-service
     volumes:
       - /app/node_modules
-      - ./server:/app
+      - ./server-service:/app
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - PGUSER=postgres
       - PGHOST=postgres
       - PGDATABASE=postgres
-      - PGPASSWORD=postgres_password
+      - PGPASSWORD=password
       - PGPORT=5432
 
-  client:
+  seesee-client:
     build:
       dockerfile: Dockerfile.dev
-      context: ./client
+      context: ./seesee-client
     volumes:
       - /app/node_modules
-      - ./client:/app
+      - ./seesee-client:/app
 
-  worker:
+  redis-service:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     build:
       dockerfile: Dockerfile.dev
-      context: ./worker
+      context: ./redis-service
     volumes:
       - /app/node_modules
-      - ./worker:/app
+      - ./redis-service:/app
