--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,7 @@ FROM node:alpine as builder
 
 WORKDIR '/app'
 
-COPY ./package.json ./
+COPY package.json .
 
 RUN npm install
 
@@ -16,4 +16,4 @@ EXPOSE 3000
 
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 
-COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /app/build/ /usr/share/nginx/html
