--- a/demo-service/Dockerfile
+++ b/demo-service/Dockerfile
@@ -1,11 +1,11 @@
 FROM node:alpine
 
-WORKDIR '/app'
+WORKDIR "/opt/demo-service"
 
 COPY package.json .
 
-RUN npm install
+RUN yarn
 
 COPY . .
 
-CMD ["npm", "start"]
+CMD yarn start
