--- a/web-client/Dockerfile
+++ b/web-client/Dockerfile
@@ -1,14 +1,14 @@
 FROM node:alpine as builder
 
-WORKDIR '/app'
+WORKDIR '/opt/web-client'
 
 COPY package.json .
 
-RUN npm install
+RUN yarn
 
 COPY . .
 
-RUN npm run build
+RUN yarn build
 
 FROM nginx
 
@@ -16,4 +16,4 @@ EXPOSE 3000
 
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 
-COPY --from=builder /app/build/ /usr/share/nginx/html
+COPY --from=builder /opt/web-client/build/ /usr/share/nginx/html
