--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,28 @@
 sudo: required
+
 services:
   - docker
 
 before_install:
-  - docker build -t danydodson/react-test -f ./seesee-client/Dockerfile.dev ./seesee-client
+  - docker build -t danydodson/react-test -f ./web-client/Dockerfile.dev ./web-client
 
 script:
   - docker run danydodson/react-test npm test -- --coverage
 
 after_success:
-  - docker build -t danydodson/seesee-client ./seesee-client
-  - docker build -t danydodson/seesee-nginx ./nginx-service
-  - docker build -t danydodson/seesee-api ./server-service
-  - docker build -t danydodson/seesee-worker ./redis-service
+  - docker build -t danydodson/seesee-api-gateway ./api-gateway
+  - docker build -t danydodson/seesee-web-client ./web-client
+  - docker build -t danydodson/seesee-nginx-service ./nginx-service
+  - docker build -t danydodson/seesee-mongo-worker ./mongo-worker
+  - docker build -t danydodson/seesee-redis-worker ./redis-worker
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
-  - docker push danydodson/seesee-client
-  - docker push danydodson/seesee-nginx
-  - docker push danydodson/seesee-api
-  - docker push danydodson/seesee-worker
+  - docker push danydodson/seesee-api-gateway
+  - docker push danydodson/seesee-web-client
+  - docker push danydodson/seesee-nginx-service
+  - docker push danydodson/seesee-mongo-worker
+  - docker push danydodson/seesee-redis-worker
 
 deploy:
   provider: elasticbeanstalk
