--- a/nginx-service/default.conf
+++ b/nginx-service/default.conf
@@ -2,8 +2,8 @@ upstream web-client {
   server web-client:3000;
 }
 
-upstream api-gateway {
-  server api-gateway:5000;
+upstream demo-service {
+  server demo-service:5000;
 }
 
 server {
@@ -20,8 +20,8 @@ server {
     proxy_set_header Connection "Upgrade";
   }
 
-  location /api-gateway {
-    rewrite /api-gateway/(.*) /$1 break;
-    proxy_pass http://api-gateway;
+  location /demo-service {
+    rewrite /demo-service/(.*) /$1 break;
+    proxy_pass http://demo-service;
   }
 }
