--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t danydodson/seesee-test -f ./web-client/Dockerfile.dev ./web-client
 
 script:
-  - docker run danydodson/seesee-test yarn test -- --coverage
+  - docker run danydodson/seesee-test npm test -- --coverage
