--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
-language: node
-
 services:
   - docker
 
 before_install:
-  - docker build -t danydodson/seesee-test -f ./web-client/Dockerfile.dev ./web-client
+  - docker build -t danydodson/seesee-test -f web-client/Dockerfile.dev web-client
 
 script:
-  - docker run danydodson/seesee-test yarn test
+  - docker run danydodson/seesee-test yarn test --watchAll=false
