--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ after_success:
   - docker build -t danydodson/nginx-service ./nginx-service
   - docker build -t danydodson/redis-worker ./redis-worker
 
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u danydodson --password-stdin
 
   - docker push danydodson/multi-client
   - docker push danydodson/multi-nginx
