--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,191 +1,61 @@
-version: '3.4'
+version: '3'
 
 services:
-  seq:
-    image: datalust/seq:latest
-
-  sqldata:
-    image: mcr.microsoft.com/mssql/server:2017-latest
-
-  nosqldata:
-    image: mongo
-
-  basketdata:
-    image: redis:alpine
-
-  rabbitmq:
-    image: rabbitmq:3-management-alpine
-
-  identity-api:
-    image: ${REGISTRY:-eshop}/identity.api:${PLATFORM:-linux}-${TAG:-latest}
+  gateway:
+    container_name: gateways
     build:
-      context: .
-      dockerfile: Services/Identity/Identity.API/Dockerfile
+      context: './gateways/web'
+      dockerfile: '/Dockerfile'
     depends_on:
-      - sqldata
+      - usersapi
+    environment:
+      - USERS_SERVICE_URI=http://usersapi:7101
+    ports:
+      - '80:7000'
+    volumes:
+      - ./gateways/web:/home/node/web
 
-  basket-api:
-    image: ${REGISTRY:-eshop}/basket.api:${PLATFORM:-linux}-${TAG:-latest}
+  usersapi:
+    container_name: usersapi
+    image: danydodson/usersapi
     build:
-      context: .
-      dockerfile: Services/Basket/Basket.API/Dockerfile
+      context: './services/users'
+      dockerfile: 'Dockerfile'
+    env_file: ./env
+    environment:
+      - MONGO_USERNAME=$MONGO_USERNAME
+      - MONGO_PASSWORD=$MONGO_PASSWORD
+      - MONGO_HOSTNAME=usersdb
+      - MONGO_PORT=$MONGO_PORT
+      - MONGO_DB=$MONGO_DB
+    ports:
+      - '80:7100'
     depends_on:
-      - basketdata
-      - identity-api
-      - rabbitmq
+      - usersdb
+    volumes:
+      - ./services/users/:/home/node/app
+      - ./services/users/node_modules:/home/node/app/node_modules
+    networks:
+      - usersnetwork
+    command: ./wait-for.sh usersdb:27017 -- /home/node/app/node_modules/.bin/nodemon src/index.js
 
-  catalog-api:
-    image: ${REGISTRY:-eshop}/catalog.api:${PLATFORM:-linux}-${TAG:-latest}
-    build:
-      context: .
-      dockerfile: Services/Catalog/Catalog.API/Dockerfile
-    depends_on:
-      - sqldata
-      - rabbitmq
+  usersdb:
+    image: mongo:4.1.8-xenial
+    container_name: usersdb
+    restart: unless-stopped
+    env_file: .env
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=$MONGO_USERNAME
+      - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASSWORD
+    volumes:
+      - userdata:/data/db
+    networks:
+      - usersnetwork
 
-  ordering-api:
-    image: ${REGISTRY:-eshop}/ordering.api:${PLATFORM:-linux}-${TAG:-latest}
-    build:
-      context: .
-      dockerfile: Services/Ordering/Ordering.API/Dockerfile
-    depends_on:
-      - sqldata
-      - rabbitmq
+networks:
+  usersnetwork:
+    driver: bridge
 
-  ordering-backgroundtasks:
-    image: ${REGISTRY:-eshop}/ordering.backgroundtasks:${PLATFORM:-linux}-${TAG:-latest}
-    build:
-      context: .
-      dockerfile: Services/Ordering/Ordering.BackgroundTasks/Dockerfile
-    depends_on:
-      - sqldata
-      - rabbitmq
-
-  marketing-api:
-    image: ${REGISTRY:-eshop}/marketing.api:${PLATFORM:-linux}-${TAG:-latest}
-    build:
-      context: .
-      dockerfile: Services/Marketing/Marketing.API/Dockerfile
-    depends_on:
-      - sqldata
-      - nosqldata
-      - identity-api
-      - rabbitmq
-
-  payment-api:
-    image: ${REGISTRY:-eshop}/payment.api:${PLATFORM:-linux}-${TAG:-latest}
-    build:
-      context: .
-      dockerfile: Services/Payment/Payment.API/Dockerfile
-    depends_on:
-      - rabbitmq
-
-  locations-api:
-    image: ${REGISTRY:-eshop}/locations.api:${PLATFORM:-linux}-${TAG:-latest}
-    build:
-      context: .
-      dockerfile: Services/Location/Locations.API/Dockerfile
-    depends_on:
-      - nosqldata
-      - rabbitmq
-
-  webhooks-api:
-    image: ${REGISTRY:-eshop}/webhooks.api:${PLATFORM:-linux}-${TAG:-latest}
-    build:
-      context: .
-      dockerfile: Services/Webhooks/Webhooks.API/Dockerfile
-    depends_on:
-      - sqldata
-
-  mobileshoppingapigw:
-    image: envoyproxy/envoy:v1.11.1
-
-  mobilemarketingapigw:
-    image: envoyproxy/envoy:v1.11.1
-
-  mobileshoppingagg:
-    image: ${REGISTRY:-eshop}/mobileshoppingagg:${PLATFORM:-linux}-${TAG:-latest}
-    build:
-      context: .
-      dockerfile: ApiGateways/Mobile.Bff.Shopping/aggregator/Dockerfile
-    depends_on:
-      - nosqldata
-      - sqldata
-      - identity-api
-      - rabbitmq
-      - ordering-api
-      - marketing-api
-      - catalog-api
-      - basket-api
-
-  webshoppingagg:
-    image: ${REGISTRY:-eshop}/webshoppingagg:${PLATFORM:-linux}-${TAG:-latest}
-    build:
-      context: .
-      dockerfile: ApiGateways/Web.Bff.Shopping/aggregator/Dockerfile
-    depends_on:
-      - nosqldata
-      - sqldata
-      - identity-api
-      - rabbitmq
-      - ordering-api
-      - marketing-api
-      - catalog-api
-      - basket-api
-
-  ordering-signalrhub:
-    image: ${REGISTRY:-eshop}/ordering.signalrhub:${PLATFORM:-linux}-${TAG:-latest}
-    build:
-      context: .
-      dockerfile: Services/Ordering/Ordering.SignalrHub/Dockerfile
-    depends_on:
-      - nosqldata
-      - sqldata
-      - identity-api
-      - rabbitmq
-      - ordering-api
-      - marketing-api
-      - catalog-api
-      - basket-api
-
-  webstatus:
-    image: ${REGISTRY:-eshop}/webstatus:${PLATFORM:-linux}-${TAG:-latest}
-    build:
-      context: .
-      dockerfile: Web/WebStatus/Dockerfile
-
-  webspa:
-    image: ${REGISTRY:-eshop}/webspa:${PLATFORM:-linux}-${TAG:-latest}
-    build:
-      context: .
-      dockerfile: Web/WebSPA/Dockerfile
-      args:
-        NODE_IMAGE: ${NODE_IMAGE:-node:10.13}
-  #    depends_on:
-  #      - webshoppingagg
-  #      - webshoppingapigw
-  #      - webmarketingapigw
-
-  webmvc:
-    image: ${REGISTRY:-eshop}/webmvc:${PLATFORM:-linux}-${TAG:-latest}
-    build:
-      context: .
-      dockerfile: Web/WebMVC/Dockerfile
-    depends_on:
-      - webshoppingagg
-      - webshoppingapigw
-      - webmarketingapigw
-
-  webhooks-client:
-    image: ${REGISTRY:-eshop}/webhooks.client:${PLATFORM:-linux}-${TAG:-latest}
-    build:
-      context: .
-      dockerfile: Web/WebhookClient/Dockerfile
-    depends_on:
-      - webhooks-api
-
-  webshoppingapigw:
-    image: envoyproxy/envoy:v1.11.1
-
-  webmarketingapigw:
-    image: envoyproxy/envoy:v1.11.1
+volumes:
+  userdata:
+  node_modules:
