--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "files.exclude": {},
+  // "files.exclude": {},
   // "javascript.validate.enable": false,
   // "typescript.tsdk": "node_modules/typescript/lib",
   // "files.trimTrailingWhitespace": true,
