--- a/src/.env
+++ b/src/.env
@@ -4,6 +4,14 @@
 
 # The IP below should be swapped to your real IP or DNS name, like 192.168.88.248, etc. if testing from remote browsers or mobile devices
 
+MONGO_USERNAME=danydodson
+MONGO_PASSWORD=password
+MONGO_PORT=27107
+MONGO_DB=seesee-platform
+
+MONGO_INITDB_ROOT_USERNAME=dany
+MONGO_INITDB_ROOT_PASSWORD=pass
+
 # Use this values to run the app locally in Windows
 ESHOP_EXTERNAL_DNS_NAME_OR_IP=docker.for.win.localhost
 ESHOP_STORAGE_CATALOG_URL=http://docker.for.win.localhost:5202/c/api/v1/catalog/items/[0]/pic/
