--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,8 +1,16 @@
 version: '3'
 
 services:
+  nginx:
+    restart: always
+    build:
+      context: ./services/nginx
+      dockerfile: Dockerfile.dev
+    ports:
+      - '3050:80'
+
   gateway:
-    container_name: gateways
+    container_name: danydodson/gateways
     build:
       context: './gateways/web'
       dockerfile: '/Dockerfile'
@@ -11,17 +19,17 @@ services:
     environment:
       - USERS_SERVICE_URI=http://usersapi:7101
     ports:
-      - '80:7000'
+      - '80:5000'
     volumes:
       - ./gateways/web:/home/node/web
 
-  usersapi:
-    container_name: usersapi
-    image: danydodson/usersapi
+  webclient:
+    container_name: webclient
     build:
       context: './services/users'
       dockerfile: 'Dockerfile'
-    env_file: ./env
+    env_file: ./gateways/webclient/.env
+    image: danydodson/webclient
     environment:
       - MONGO_USERNAME=$MONGO_USERNAME
       - MONGO_PASSWORD=$MONGO_PASSWORD
@@ -37,13 +45,37 @@ services:
       - ./services/users/node_modules:/home/node/app/node_modules
     networks:
       - usersnetwork
-    command: ./wait-for.sh usersdb:27017 -- /home/node/app/node_modules/.bin/nodemon src/index.js
+    command: ./services/users/wait-for.sh usersdb:27017 -- /home/node/app/node_modules/.bin/nodemon src/index.js
+
+  usersapi:
+    container_name: usersapi
+    build:
+      context: './services/users'
+      dockerfile: 'Dockerfile'
+    env_file: ./services/users/.env
+    image: danydodson/usersapi
+    environment:
+      - MONGO_USERNAME=$MONGO_USERNAME
+      - MONGO_PASSWORD=$MONGO_PASSWORD
+      - MONGO_HOSTNAME=usersdb
+      - MONGO_PORT=$MONGO_PORT
+      - MONGO_DB=$MONGO_DB
+    ports:
+      - '80:7100'
+    depends_on:
+      - usersdb
+    volumes:
+      - ./services/users/:/home/node/app
+      - ./services/users/node_modules:/home/node/app/node_modules
+    networks:
+      - usersnetwork
+    command: ./services/users/wait-for.sh usersdb:27017 -- /home/node/app/node_modules/.bin/nodemon src/index.js
 
   usersdb:
-    image: mongo:4.1.8-xenial
     container_name: usersdb
+    image: mongo:4.1.8-xenial
     restart: unless-stopped
-    env_file: .env
+    env_file: ./services/users/.env
     environment:
       - MONGO_INITDB_ROOT_USERNAME=$MONGO_USERNAME
       - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASSWORD
