--- a/src/services/users/api/package.json
+++ b/src/services/users/api/package.json
@@ -6,11 +6,10 @@
   "description": "users microservice for seesee platform",
   "main": "src/index.js",
   "scripts": {
-    "clean": "rimraf dist",
-    "install": "npm install",
+    "clean": "rimraf build",
     "build": "npm run clean && webpack --progress",
     "deploy": "node-deploy $(pwd)",
-    "linkall": "yarn link node-deploy",
+    "linkall": "npm link node-deploy",
     "watch": "babel-watch -L src/index.js",
     "test": "cross-env NODE_ENV=test jest --detectOpenHandles"
   },
