--- a/src/services/users/api/Dockerfile.dev
+++ b/src/services/users/api/Dockerfile.dev
@@ -4,14 +4,14 @@ RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
 
 WORKDIR '/home/node/app'
 
-COPY package*.json .
+COPY ./package*.json ./
 
 RUN npm install
 
 USER node
 
-COPY --chown=node:node . .
+COPY --chown=node:node ./ ./
 
 EXPOSE 5000
 
-CMD ['npm', 'run', 'start']
+CMD ['npm', 'run', 'watch']
