--- a/src/services/users/api/Dockerfile.test
+++ b/src/services/users/api/Dockerfile.test
@@ -1,14 +1,14 @@
 FROM node:7.8
 
-RUN mkdir -p /src
+RUN mkdir -p /home/node/app
 
-COPY . /src
+COPY . /home/node/app
 
-WORKDIR /src
+WORKDIR /home/node/app
 
-RUN yarn install
+RUN npm install
 
 ENV PORT 3001
 EXPOSE $PORT
 
-CMD ["yarn", "run", "docker-test"]
+CMD ["npm", "run", "docker-test"]
