--- a/src/services/users/api/docker-compose.yml
+++ b/src/services/users/api/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: usersapi
     build:
       context: .
-      dockerfile: 'Dockerfile'
-    env_file: .develop.env
+      dockerfile: 'Dockerfile.dev'
+    env_file: .env
     environment:
       - MONGO_USERNAME=$MONGO_USERNAME
       - MONGO_PASSWORD=$MONGO_PASSWORD
@@ -18,17 +18,17 @@ services:
     depends_on:
       - usersdb
     volumes:
-      - .:/home/node/app
-      - node_modules:/home/node/app/node_modules
+      - ./:/home/node/app
+      - ./node_modules:/home/node/app/node_modules
     networks:
       - usersnetwork
-    command: ./wait-for.sh usersdb:27017 -- /home/node/app/node_modules/.bin/nodemon src/index.js
+    # command: ./wait-for.sh usersdb:27017 -- /home/node/app/node_modules/.bin/nodemon v1/index.js
 
   usersdb:
     image: mongo
     container_name: usersdb
     restart: unless-stopped
-    env_file: .develop.env
+    env_file: .env
     environment:
       - MONGO_INITDB_ROOT_USERNAME=$MONGO_USERNAME
       - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASSWORD
