--- a/src/services/auth/docker-compose.yml
+++ b/src/services/auth/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 services:
   #
-  gallery_api:
-    image: danydodson/gallery_api
-    container_name: gallery_api
+  auth_service:
+    image: danydodson/auth_service
+    container_name: auth_service
     build:
       context: .
       dockerfile: 'Dockerfile'
@@ -11,38 +11,38 @@ services:
     environment:
       - MONGO_USERNAME=$MONGO_USERNAME
       - MONGO_PASSWORD=$MONGO_PASSWORD
-      - MONGO_HOSTNAME=gallery_db
+      - MONGO_HOSTNAME=auth_db
       - MONGO_DB=$MONGO_DB
     ports:
       - '80:5000'
     depends_on:
-      - gallery_db
+      - auth_db
     volumes:
       - .:/home/node/app
       - node_modules:/home/node/app/node_modules
     networks:
-      - gallery_network
-    command: ./wait-for.sh gallery_db:27017 -- /home/node/app/node_modules/.bin/nodemon src/index.js
+      - auth_network
+    command: ./wait-for.sh auth_db:27017 -- /home/node/app/node_modules/.bin/nodemon src/index.js
 
-  gallery_db:
+  auth_db:
     image: mongo
-    container_name: gallery_db
+    container_name: auth_db
     restart: unless-stopped
     env_file: .develop.env
     environment:
       - MONGO_INITDB_ROOT_USERNAME=$MONGO_USERNAME
       - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASSWORD
     volumes:
-      - gallery_db_vol:/data/db
+      - auth_db_vol:/data/db
     ports:
       - '27018:27017'
     networks:
-      - gallery_network
+      - auth_network
 
 networks:
-  gallery_network:
+  auth_network:
     driver: bridge
 
 volumes:
-  gallery_db_vol:
+  auth_db_vol:
   node_modules:
