--- a/services/test-api/docker-compose.yml
+++ b/services/test-api/docker-compose.yml
@@ -1,21 +1,23 @@
-version: '3.1'
+version: '3'
+
 services:
   nginx:
-    image: nginx:1.13.7
+    image: nginx
     container_name: nginx
     depends_on:
-      - flask
+      - react-app
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
-      - my-network
+      - test-network
     ports:
       - 80:80
-  flask:
+
+  react-app:
     build:
       context: ./
       dockerfile: Dockerfile
-    image: flask:0.0.1
+    image: node
     container_name: flask
     volumes:
       - ./:/code/
@@ -23,8 +25,9 @@ services:
       - FLASK_APP=/code/main.py
     command: flask run --host=0.0.0.0
     networks:
-      my-network:
+      test-network:
         aliases:
           - flask-app
+
 networks:
-  my-network:
+  test-network:
