--- a/services/test-api/nginx.conf
+++ b/services/test-api/nginx.conf
@@ -3,7 +3,7 @@ server {
   server_name localhost;
 
   location / {
-    proxy_pass http://flask-app:5000/;
+    proxy_pass http://test-api:5000/;
     proxy_set_header Host "localhost";
   }
 }
