added nginx test for docker react

--- a/services/test-api/docker-compose.yml
+++ b/services/test-api/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       context: ./
       dockerfile: Dockerfile
     image: node
-    container_name: flask
+    container_name: react-app
     volumes:
       - ./:/code/
     environment:
