--- a/gateway/nginx-proxy/nginx/default.conf
+++ b/gateway/nginx-proxy/nginx/default.conf
@@ -2,11 +2,12 @@ upstream client {
   server client:3000;
 }
 
-upstream api {
-  server api:5000;
+upstream services-test-api {
+  server services-test-api:7000;
 }
 
 server {
+
   listen 80;
 
   location / {
@@ -14,14 +15,14 @@ server {
   }
 
   location /sockjs-node {
-    proxy_pass http://weclientb;
+    proxy_pass http://client;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
   }
 
-  location /api {
-    rewrite /api/(.*) /$1 break;
-    proxy_pass http://api;
+  location /services-test-api {
+    rewrite /services-test-api/(.*) /$1 break;
+    proxy_pass http://services-test-api;
   }
 }
