testing nginx proxy

--- a/gateway/nginx-proxy/nginx/default.conf
+++ b/gateway/nginx-proxy/nginx/default.conf
@@ -1,5 +1,5 @@
-upstream client {
-  server client:3000;
+upstream web-gallery-pwa {
+  server web-gallery-pwa:3000;
 }
 
 upstream services-test-api {
@@ -11,11 +11,11 @@ server {
   listen 80;
 
   location / {
-    proxy_pass http://client;
+    proxy_pass http://web-gallery-pwa;
   }
 
   location /sockjs-node {
-    proxy_pass http://client;
+    proxy_pass http://web-gallery-pwa;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
