--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,16 @@ services:
     build: 
       context: ./gateway/nginx-proxy
       dockerfile: Dockerfile
+    restart: always
     volumes:
       - ./gateway/nginx-proxy/default.conf:/etc/nginx/conf.d/default.conf
       - ~/.gitconfig:/home/node/.gitconfig
     ports:
       - 80:80
       - 443:443
-    restart: always
+    # networks:
+    #   - web-gallery-pwa-network
+    #   - services-test-api-network
     # links:
     #   - gateway-web-client
     #   - services-gallery-api
@@ -80,3 +83,11 @@ services:
 
 volumes:
   node_modules:
+
+networks:
+  web-gallery-pwa-network:
+    external:
+      name: web-gallery-pwa
+  services-test-api-network:
+    external:
+      name: services-test-api
