--- a/gateway/nginx-proxy/Dockerfile
+++ b/gateway/nginx-proxy/Dockerfile
@@ -3,3 +3,5 @@ FROM nginx:stable-alpine
 RUN rm /etc/nginx/conf.d/default.conf
 
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+RUN chown nginx:nginx /usr/share/nginx/html/ -R
