--- a/gateway/web-client/package.json
+++ b/gateway/web-client/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "seesee-web-gallery-pwa",
+  "name": "seesee-gateway-web-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:7100",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "axios": "^0.18.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
